<resources>
    <string name="app_name">SHARCodeCode</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_a_r">ARActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->

    <string name="ar_popup_input_name_title">젝목 입력</string>
    <string name="ar_popup_input_area">(옵션) 방 대략 면적(제곱미터) 입력</string>

    <string name="ar_popup_confirm">확인</string>

    <string name="ar_unit_m">m</string>
    <string name="ar_unit_cm">cm</string>

    <string name="ar_input_length_unit">단위선택</string>
    <string name="ar_measure_height_title">높이 측정</string>
    <string name="ar_measure_height_auto">자동 측정</string>
    <string name="ar_measure_height_draw">직접 측정</string>
    <string name="ar_measure_height_input">직접 입력</string>

    <string name="hello_world">Hello Square World!</string>
    <string name="ar_too_close">사용자와 지면/벽면 사이의 거리가 너무 가깝습니다. 0.5m ~ 2m 유지하는 것 권장합니다.</string>
    <string name="ar_too_far">사용자와 지면/벽면 사이의 거리가 너무 멀습니다. 0.5m ~ 2m 유지하는 것 권장합니다.</string>
    <string name="ar_plane_type_wall">벽</string>
    <string name="ar_plane_type_ceiling">천장</string>
    <string name="ar_plane_type_floor">바닥</string>

    <string name="ar_area_title">면적</string>
    <string name="ar_area_circumference_title">둘레</string>
    <string name="ar_area_height_title">높이</string>
    <string name="ar_wall_area_title">벽면적</string>
    <string name="ar_volume_title">체적</string>

    <string name="ar_select_unit">단위 선택</string>

    <string name="ar_scan_ready_hint">카메라를 바닥으로 향하여 좌우로 흔들면 자동으로 감지됩니다.</string>
    <string name="ar_scan_ceiling_hint">카메라를 천장으로 향하여 좌우로 흔들면 자동으로 감지됩니다.</string>

    <string name="ar_draw_height">공간의 높이를 측정하세요.</string>
    <string name="ar_draw_height_by_ceiling_auto">바닥에 점을 찍고 천장을 감지하면 자동으로 높이가 측정됩니다.</string>
    <string name="ar_draw_height_direct">벽과 바닥의 연결 지점에서 시작점 설정 후 천장의 끝 지점을 설정하면 높이가 측정됩니다.</string>
    <string name="ar_draw_height_input">공간의 높이를 직접 입력하세요.</string>

    <string name="ar_scan_floor">바닥을 감지해 주세요.</string>
    <string name="ar_scan_floor_hint">바닥면을 최대한 감지해 주세요.</string>
    <string name="ar_scan_ceiling">천장을 감지해 주세요.</string>
    <string name="ar_draw_floor">측정할 공간의 모서리에 맞춰 점을 찍어주세요.</string>
    <string name="ar_draw_floor_title">공간측정</string>

    <string name="ar_draw_window">창문을 그려 주세요.</string>
    <string name="ar_draw_door">문을 그려 주세요.</string>


    <string name="ar_save">저장하기</string>

    <string name="ar_draw_window_button">창 그리기</string>
    <string name="ar_draw_door_button">문 그리기</string>

</resources>