<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".arpart.ARActivity">

    <com.google.ar.sceneform.ArSceneView
        android:id="@+id/arSceneView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:visibility="gone"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:padding="10dp"
        android:background="@color/half_20_transparent"
        android:id="@+id/textViewHint"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center_horizontal|bottom"
        android:textSize="7pt"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:visibility="gone"
        android:id="@+id/frameLayoutTooCloseTooFar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/too_close_bg">

        <TextView
            android:id="@+id/textViewTooCloseTooFar"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:textSize="8pt"
            android:textColor="#fff"
            android:text="@string/ar_too_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </FrameLayout>

    <TextView
        android:layout_gravity="bottom"
        android:layout_margin="5dp"
        android:id="@+id/textViewHeightRealTime"
        android:textSize="6pt"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textViewPlaneType"
        android:textSize="8pt"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="end|bottom"
        android:id="@+id/textViewNearest"
        android:textSize="8pt"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:padding="5dp"
        android:background="@drawable/circle_half_20_transparent"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="34dp"
        android:src="@drawable/ti_ar_back"
        android:scaleType="fitCenter"
        android:id="@+id/imageViewBack"
        android:layout_gravity="bottom"
        android:layout_width="34dp"
        android:layout_height="34dp"/>

    <ImageView
        android:padding="5dp"
        android:background="@drawable/circle_half_20_transparent"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="34dp"
        android:id="@+id/imageViewReset"
        android:scaleType="fitCenter"
        android:src="@drawable/ti_ar_reset"
        android:layout_gravity="bottom|end"
        android:layout_width="34dp"
        android:layout_height="34dp"/>

    <LinearLayout
        android:visibility="gone"
        android:padding="10dp"
        android:background="@drawable/round_corner_half_30_transparent"
        android:layout_margin="15dp"
        android:layout_gravity="end"
        android:id="@+id/linearLayoutInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/ar_area_title"
            android:id="@+id/textViewArea"
            android:textSize="8pt"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/ar_area_circumference_title"
            android:id="@+id/textViewCircumference"
            android:textSize="8pt"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/ar_area_height_title"
            android:id="@+id/textViewHeight"
            android:textSize="8pt"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/ar_wall_area_title"
            android:id="@+id/textViewWallArea"
            android:textSize="8pt"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/ar_volume_title"
            android:id="@+id/textViewVolume"
            android:textSize="8pt"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <FrameLayout
        android:visibility="gone"
        android:id="@+id/frameLayoutPopup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</FrameLayout>