<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/half_20_transparent"
    android:clickable="true"
    android:focusable="true"
    android:id="@+id/frameLayoutRoot">

    <LinearLayout
        android:clickable="true"
        android:focusable="true"
        android:layout_gravity="center"
        android:background="@drawable/round_corner_white_bg"
        android:minWidth="310dp"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/ar_measure_height_title"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="23dp"
            android:textSize="7pt"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="23dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:padding="10dp"
                android:gravity="center"
                android:background="@drawable/round_corner_gray_bg"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:src="@drawable/ti_auto_m"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="fitCenter"/>
                <TextView
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:text="@string/ar_measure_height_auto"
                    android:id="@+id/textViewAuto"
                    android:textSize="6pt"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="10dp"
                android:padding="10dp"
                android:gravity="center"
                android:background="@drawable/round_corner_gray_bg"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:src="@drawable/ti_m"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:text="@string/ar_measure_height_draw"
                    android:id="@+id/textViewDraw"
                    android:textSize="6pt"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:padding="5dp"
                android:gravity="center"
                android:text="@string/ar_measure_height_input"
                android:textSize="6pt"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:background="@drawable/ar_input_height_bg"
                android:imeOptions="actionDone"
                android:layout_gravity="center_vertical"
                android:padding="5dp"
                android:layout_marginStart="10dp"
                android:id="@+id/editText"
                android:textColor="@color/black"
                android:inputType="numberDecimal"
                android:textSize="6pt"
                android:layout_width="50dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:padding="5dp"
                android:gravity="center"
                android:id="@+id/textViewUnit"
                android:textSize="6pt"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:padding="5dp"
            android:background="@drawable/round_corner_white_bg"
            android:gravity="center"
            android:text="@string/ar_popup_confirm"
            android:id="@+id/textViewConfirm"
            android:textSize="6pt"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

    </LinearLayout>
</FrameLayout>